--- a/style.css
+++ b/style.css
@@ -32,7 +32,8 @@ body{
     left: 0;
     width: 100%;
     padding: 4rem 5% 4rem;
-    background: #1a3636;
+    background: rgba(26, 54, 54, 0.7); 
+    backdrop-filter: blur(10px);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -144,4 +145,120 @@ span{
     box-shadow: 0 0 25px var(--main-color);
     background-color: var(--main-color);
 }
-
+.about h1{
+    padding:2rem 5% 3rem;
+    font-size: 3.5rem;
+    font-weight: 800;
+    text-align: center;
+}
+.seg{
+    display: grid;
+    grid-template-columns:repeat(2,1fr);
+    align-items: center;
+    gap: 2.2rem;
+}
+.about-box{
+    height: 230px;
+    padding: 2rem 9% 2rem;
+    background-color: var(--main-color);
+    border-radius: 3rem;
+}
+.about-box h3{
+    font-weight: 700;
+    margin-bottom: 1.2rem;
+    font-size: 2rem;
+}
+.about-box li{
+    padding: 4px;
+    font-size: 12px;
+}
+.seg-box{
+    height: 190px;
+    padding: 3rem 10% 3rem;
+    background-color: var(--sec-bg-color);
+    border-radius: 3rem;
+    cursor: pointer;
+    transition: 0.4s ease-in-out;
+}
+.seg-box:hover{
+    transform: scale(1.1)translate(-2px);
+    box-shadow: 0 0 25px var(--bg-color);
+}
+.heading{
+    font-size: 3.5rem;
+    font-weight: 800;
+    text-align: center;
+    margin: 5rem 0;
+}
+.education{
+    padding-inline: 100px 15px;
+    background: var(--sec-bg-color) ;
+}
+.education h2{
+    margin-bottom: 5rem;
+}
+.timeline-items{
+    max-width: 1200px;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
+}
+.timeline-items::before{
+    content: "";
+    position: absolute;
+    width: 5px;
+    height: 100%;
+    background-color: var(--main-color);
+    left: calc(50% - 1px);
+}
+.timeline-item{
+    margin-bottom: 40px;
+    width: 100%;
+    position: relative;
+}
+.timeline-item:last-child{
+    margin-bottom: 0;
+}
+.timeline-item:nth-child(odd){
+    padding-right: calc(50% + 30px);
+    align-items: right;
+}
+.timeline-item:nth-child(even){
+    padding-left: calc(50% + 30px);
+}
+.timeline-dot{
+    height: 21px;
+    width: 21px;
+    background-color: var(--main-color);
+    box-shadow: 0 0 25px var(--main-color),
+                0 0 50px var(--main-color);
+    position: absolute;
+    left: calc(50% - 8px);
+    border-radius: 50%;
+    top: 10px;
+}
+.timeline-cont{
+    background-color: var(--bg-color);
+    border: 3px solid var(--main-color);
+    padding: 30px 50px;
+    border-radius: 4rem;
+    cursor: pointer;
+    transition: 0.3s ease-in-out;
+}
+.timeline-cont:hover{
+    transform: scale(1.05);
+    box-shadow: 0 0 20px var(--main-color);
+}
+.timeline-cont h3{
+    font-size: 20px;
+    color: white;
+    margin: 0 0 10px;
+    font-weight: 500;
+}
+.timeline-cont p{
+    color: white;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 22px;
+}
